<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >

    <ImageButton
        android:id="@+id/btnAdobo"
        android:layout_width="123dp"
        android:layout_height="89dp"
        android:layout_marginTop="276dp"
        android:background="@android:drawable/checkbox_off_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adobo"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck"
        tools:srcCompat="@drawable/adobo" />


    <ImageButton
        android:id="@+id/btnMenudo"
        android:layout_width="123dp"
        android:layout_height="89dp"
        android:layout_marginTop="424dp"
        android:background="@android:drawable/checkbox_off_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menudo"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck"
        tools:srcCompat="@drawable/menudo" />


    <ImageButton
        android:id="@+id/btnSisig"
        android:layout_width="128dp"
        android:layout_height="90dp"
        android:layout_marginTop="276dp"
        android:background="@android:drawable/checkbox_off_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sisig"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck"
        tools:srcCompat="@drawable/sisig" />


    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginTop="148dp"
        android:fontFamily="cursive"
        android:text="@string/title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />


    <TextView
        android:id="@+id/txtAdobo"
        android:layout_width="76dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/adobo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdobo"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtSisig"
        android:layout_width="69dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/permanent_marker"
        android:gravity="center"
        android:text="@string/sisig"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSisig"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtMenudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/menudo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenudo" />

    <TextView
        android:id="@+id/txtKarekare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/karekare"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKarekare" />

    <ImageButton
        android:id="@+id/btnKarekare"
        android:layout_width="123dp"
        android:layout_height="89dp"
        android:layout_marginTop="424dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/karekare"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="388dp"
        android:background="@drawable/rounded_corner2"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext" />

    <Button
        android:id="@+id/btnAU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:text="@string/about_us"
        android:background="@drawable/rounded_corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext" />

</androidx.constraintlayout.widget.ConstraintLayout>