<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginTop="148dp"
        android:fontFamily="cursive"
        android:text="@string/title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/btnBistek"
        android:layout_width="128dp"
        android:layout_height="90dp"
        android:layout_marginTop="276dp"
        android:background="@android:drawable/checkbox_off_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bistek"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnSinigang"
        android:layout_width="128dp"
        android:layout_height="90dp"
        android:layout_marginTop="276dp"
        android:background="@android:drawable/checkbox_off_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sinigang"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnKaldereta"
        android:layout_width="123dp"
        android:layout_height="89dp"
        android:layout_marginTop="424dp"
        android:background="@android:drawable/checkbox_off_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kaldereta"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnChopsuey"
        android:layout_width="123dp"
        android:layout_height="89dp"
        android:layout_marginTop="424dp"
        android:background="@android:drawable/checkbox_off_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chopsuey"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtBistek"
        android:layout_width="76dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/bistek"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBistek"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtSinigang"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/sinigang"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSinigang"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtKalderreta"
        android:layout_width="119dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/permanent_marker"
        android:gravity="center"
        android:text="@string/kaldereta"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKaldereta"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtChopsuey"
        android:layout_width="119dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/permanent_marker"
        android:gravity="center"
        android:text="@string/chopsuey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChopsuey"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnHome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="408dp"
        android:background="@drawable/rounded_corner2"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />


</androidx.constraintlayout.widget.ConstraintLayout>